added picture to the folder and changed link in html file

--- a/bio.html
+++ b/bio.html
@@ -8,7 +8,7 @@
         
         <h2>Jaron Johnson</h2>
 
-        <img src="../CroppedJare.png" alt="Jare's pic">
+        <img src="CroppedJare.png" alt="Jare's pic">
 
         <p>
             Trust fund organic quinoa farm-to-table vaporware, meh 
